[gd_scene load_steps=12 format=3 uid="uid://cewtcn5mp3p3b"]

[ext_resource type="Script" path="res://ui/upgrade_menu.gd" id="1_xca64"]
[ext_resource type="Texture2D" uid="uid://dgn32eh1ko8qw" path="res://assets/sprites/left_arrow.png" id="2_mtgm0"]
[ext_resource type="Texture2D" uid="uid://dh2ir8d6y5t8w" path="res://assets/sprites/water_icon.png" id="3_0fe4j"]
[ext_resource type="Texture2D" uid="uid://bd17segsrbx12" path="res://assets/sprites/panel.png" id="3_hls1n"]
[ext_resource type="Texture2D" uid="uid://07wr6wlafnyk" path="res://assets/sprites/right_arrow.png" id="4_51xbp"]
[ext_resource type="Theme" uid="uid://bbot8f347duf0" path="res://assets/resources/font_theme.tres" id="5_psyno"]
[ext_resource type="Texture2D" uid="uid://j217o4fahfko" path="res://assets/sprites/wood_icon.png" id="6_qmeho"]
[ext_resource type="Texture2D" uid="uid://vquoxdnpnw7j" path="res://assets/sprites/ore_icon.png" id="7_g65px"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogxre"]
bg_color = Color(0, 0, 0, 0.796078)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ligfl"]
texture = ExtResource("3_hls1n")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 15.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o2cgh"]
texture = ExtResource("3_hls1n")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 15.0
texture_margin_bottom = 4.0

[node name="UpgradeMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xca64")

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ogxre")

[node name="MarginContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -69.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(270, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -40.0
offset_right = 136.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = -1
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="MarginContainer/Upgrade"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ligfl")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Upgrade"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Upgrade/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Upgrade/MarginContainer/CenterContainer"]
layout_mode = 2
theme = ExtResource("5_psyno")
theme_override_constants/separation = 27

[node name="Back" type="Button" parent="MarginContainer/Upgrade/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_psyno")
icon = ExtResource("2_mtgm0")

[node name="Upgrade" type="Button" parent="MarginContainer/Upgrade/MarginContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Sword"

[node name="Next" type="Button" parent="MarginContainer/Upgrade/MarginContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("4_51xbp")

[node name="LevelUpUi" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.774
anchor_top = 0.241
anchor_right = 0.774
anchor_bottom = 0.241
offset_left = -195.824
offset_top = 31.916
offset_right = -121.824
offset_bottom = 56.916
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Panel" type="Panel" parent="MarginContainer/LevelUpUi"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/LevelUpUi"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 14

[node name="LvlLabel" type="Label" parent="MarginContainer/LevelUpUi/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lvl: 1"
horizontal_alignment = 1

[node name="ResourceCount" type="MarginContainer" parent="MarginContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -123.0
offset_right = 62.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Panel" type="Panel" parent="MarginContainer/ResourceCount"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_o2cgh")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ResourceCount"]
custom_minimum_size = Vector2(124, 22)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/ResourceCount/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = " Need: "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_0fe4j")

[node name="WaterLabel" type="Label" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_psyno")
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_qmeho")

[node name="WoodLabel" type="Label" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_psyno")
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("7_g65px")

[node name="OreLabel" type="Label" parent="MarginContainer/ResourceCount/MarginContainer/CenterContainer/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_psyno")
text = "1"

[connection signal="pressed" from="MarginContainer/Upgrade/MarginContainer/CenterContainer/HBoxContainer/Back" to="." method="previous_upgrade"]
[connection signal="pressed" from="MarginContainer/Upgrade/MarginContainer/CenterContainer/HBoxContainer/Upgrade" to="." method="apply_upgrade"]
[connection signal="pressed" from="MarginContainer/Upgrade/MarginContainer/CenterContainer/HBoxContainer/Next" to="." method="next_upgrade"]
